Proyecto Individual/force-app/main/default/objects/User_Answer__c/User_Answer__c.object-meta.xml
<CustomObject>
    <label>User - Answer</label>
    <nameField>
        <displayFormat>UA-{0000}</displayFormat>
        <label>User - Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User - Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>