Proyecto Individual/force-app/main/default/objects/User_Answer__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Answer</label>
    <referenceTo>Answer__c</referenceTo>
    <relationshipLabel>User - Answers</relationshipLabel>
    <relationshipName>User_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>