Proyecto Individual/force-app/main/default/objects/User_Answer__c/fields/User_Unit__c.field-meta.xml
<CustomField>
    <fullName>User_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User - Unit</label>
    <referenceTo>User_Unit__c</referenceTo>
    <relationshipLabel>User - Answers</relationshipLabel>
    <relationshipName>User_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>